update java note: jvm args & threadlocal